force-app/main/default/objects/ExpoApplyInfo__c/ExpoApplyInfo__c.object-meta.xml
<CustomObject>
    <label>Exhibition Customer</label>
    <nameField>
        <label>VisitorCode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exhibition Customers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>