force-app/main/default/objects/ExpoApplyInfo__c/fields/BrandPreferenceCN__c.field-meta.xml
<CustomField>
    <fullName>BrandPreferenceCN__c</fullName>
    <label>Brand Preference CN</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hisense</fullName>
            </value>
            <value>
                <fullName>Gorenje</fullName>
            </value>
            <value>
                <fullName>ASKO</fullName>
            </value>
            <value>
                <fullName>Toshiba</fullName>
            </value>
            <value>
                <fullName>MORA</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Other Brands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>