force-app/main/default/objects/ExpoApplyInfo__c/fields/ClaimEmail__c.field-meta.xml
<CustomField>
    <fullName>ClaimEmail__c</fullName>
    <description>认领人邮箱</description>
    <label>ClaimEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>