force-app/main/default/objects/ExpoApplyInfo__c/fields/CompanyCN__c.field-meta.xml
<CustomField>
    <fullName>CompanyCN__c</fullName>
    <label>Company CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>