force-app/main/default/objects/ExpoApplyInfo__c/fields/CompanyEN__c.field-meta.xml
<CustomField>
    <fullName>CompanyEN__c</fullName>
    <label>Company EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>