force-app/main/default/objects/ExpoApplyInfo__c/fields/Cooperative_State__c.field-meta.xml
<CustomField>
    <fullName>Cooperative_State__c</fullName>
    <label>Cooperative State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>已合作</fullName>
            </value>
            <value>
                <fullName>未合作</fullName>
            </value>
            <value>
                <fullName>计划开发</fullName>
            </value>
            <value>
                <fullName>Already cooperated</fullName>
            </value>
            <value>
                <fullName>Not cooperated</fullName>
            </value>
            <value>
                <fullName>Plan Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>