force-app/main/default/objects/ExpoApplyInfo__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country/Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Exhibition_Country</valueSetName>
    </valueSet>
</CustomField>