force-app/main/default/objects/ExpoApplyInfo__c/fields/CountryRegionCN__c.field-meta.xml
<CustomField>
    <fullName>CountryRegionCN__c</fullName>
    <label>Country CN</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>