force-app/main/default/objects/ExpoApplyInfo__c/fields/CountryRegionEN__c.field-meta.xml
<CustomField>
    <fullName>CountryRegionEN__c</fullName>
    <label>Country EN</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>