force-app/main/default/objects/ExpoApplyInfo__c/fields/Duty__c.field-meta.xml
<CustomField>
    <fullName>Duty__c</fullName>
    <label>Duty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>