force-app/main/default/objects/ExpoApplyInfo__c/fields/ExhibitionArrangement1__c.field-meta.xml
<CustomField>
    <fullName>ExhibitionArrangement1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Arrangement1</label>
    <referenceTo>Exhibition_Arrangement__c</referenceTo>
    <relationshipLabel>Exhibition Customers (Exhibition Arrangement1)</relationshipLabel>
    <relationshipName>Exhibition_Customers3</relationshipName>
    <type>Lookup</type>
</CustomField>