force-app/main/default/objects/ExpoApplyInfo__c/fields/ExhibitionArrangement2__c.field-meta.xml
<CustomField>
    <fullName>ExhibitionArrangement2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Arrangement2</label>
    <referenceTo>Exhibition_Arrangement__c</referenceTo>
    <relationshipLabel>Exhibition Customers (Exhibition Arrangement2)</relationshipLabel>
    <relationshipName>Exhibition_Customers2</relationshipName>
    <type>Lookup</type>
</CustomField>