force-app/main/default/objects/ExpoApplyInfo__c/fields/ExhibitionArrangement3__c.field-meta.xml
<CustomField>
    <fullName>ExhibitionArrangement3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Arrangement3</label>
    <referenceTo>Exhibition_Arrangement__c</referenceTo>
    <relationshipLabel>Exhibition Customers (Exhibition Arrangement3)</relationshipLabel>
    <relationshipName>Exhibition_Customers1</relationshipName>
    <type>Lookup</type>
</CustomField>