force-app/main/default/objects/ExpoApplyInfo__c/fields/Expect_to_meet_people__c.field-meta.xml
<CustomField>
    <fullName>Expect_to_meet_people__c</fullName>
    <label>Expect to meet people</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>