force-app/main/default/objects/ExpoApplyInfo__c/fields/ExpoId__c.field-meta.xml
<CustomField>
    <fullName>ExpoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Information</label>
    <referenceTo>ExpoInfo__c</referenceTo>
    <relationshipLabel>Exhibition Customers</relationshipLabel>
    <relationshipName>ExpoApplyInfos</relationshipName>
    <type>Lookup</type>
</CustomField>