force-app/main/default/objects/ExpoApplyInfo__c/fields/ExpoTitleEN__c.field-meta.xml
<CustomField>
    <fullName>ExpoTitleEN__c</fullName>
    <label>Exhibition Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>