force-app/main/default/objects/ExpoApplyInfo__c/fields/FirstNameCN__c.field-meta.xml
<CustomField>
    <fullName>FirstNameCN__c</fullName>
    <label>First Name CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>