force-app/main/default/objects/ExpoApplyInfo__c/fields/FirstNameEN__c.field-meta.xml
<CustomField>
    <fullName>FirstNameEN__c</fullName>
    <label>First Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>