force-app/main/default/objects/ExpoApplyInfo__c/fields/IndustryCN__c.field-meta.xml
<CustomField>
    <fullName>IndustryCN__c</fullName>
    <label>Industry/Business Intro CN</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>