force-app/main/default/objects/ExpoApplyInfo__c/fields/IndustryEN__c.field-meta.xml
<CustomField>
    <fullName>IndustryEN__c</fullName>
    <label>Industry/Business Intro EN</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>