force-app/main/default/objects/ExpoApplyInfo__c/fields/Is_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Is_Allocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Allocated</label>
    <type>Checkbox</type>
</CustomField>