force-app/main/default/objects/ExpoApplyInfo__c/fields/Is_Present__c.field-meta.xml
<CustomField>
    <fullName>Is_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attand on-site</label>
    <type>Checkbox</type>
</CustomField>