force-app/main/default/objects/ExpoApplyInfo__c/fields/ObjectiveCN__c.field-meta.xml
<CustomField>
    <fullName>ObjectiveCN__c</fullName>
    <label>Objective CN</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>