force-app/main/default/objects/ExpoApplyInfo__c/fields/OtherInfo__c.field-meta.xml
<CustomField>
    <fullName>OtherInfo__c</fullName>
    <label>OtherInfo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>