force-app/main/default/objects/ExpoApplyInfo__c/fields/Owner_User1__c.field-meta.xml
<CustomField>
    <fullName>Owner_User1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>通知用户1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>bkFn</relationshipName>
    <type>Lookup</type>
</CustomField>