force-app/main/default/objects/ExpoApplyInfo__c/fields/Owner_User2__c.field-meta.xml
<CustomField>
    <fullName>Owner_User2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>通知用户2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>bk0e</relationshipName>
    <type>Lookup</type>
</CustomField>