force-app/main/default/objects/ExpoApplyInfo__c/fields/Owner_User3__c.field-meta.xml
<CustomField>
    <fullName>Owner_User3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>通知用户3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>bkGM</relationshipName>
    <type>Lookup</type>
</CustomField>