force-app/main/default/objects/ExpoApplyInfo__c/fields/ProductInterestCN__c.field-meta.xml
<CustomField>
    <fullName>ProductInterestCN__c</fullName>
    <label>Product Interest CN</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>电视</fullName>
            </value>
            <value>
                <fullName>激光电视</fullName>
            </value>
            <value>
                <fullName>商用显示</fullName>
            </value>
            <value>
                <fullName>冰箱</fullName>
            </value>
            <value>
                <fullName>洗衣机</fullName>
            </value>
            <value>
                <fullName>冷柜</fullName>
            </value>
            <value>
                <fullName>厨电</fullName>
            </value>
            <value>
                <fullName>小家电</fullName>
            </value>
            <value>
                <fullName>家用空调</fullName>
            </value>
            <value>
                <fullName>轻型商用空调</fullName>
            </value>
            <value>
                <fullName>商用空调</fullName>
            </value>
            <value>
                <fullName>手机</fullName>
            </value>
            <value>
                <fullName>其他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>