force-app/main/default/objects/ExpoApplyInfo__c/fields/ProductInterestEN__c.field-meta.xml
<CustomField>
    <fullName>ProductInterestEN__c</fullName>
    <label>Product Interest EN</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>LASER TV</fullName>
            </value>
            <value>
                <fullName>Commercial Display</fullName>
            </value>
            <value>
                <fullName>Refrigerator（REF）</fullName>
            </value>
            <value>
                <fullName>Washing Machine（WM）</fullName>
            </value>
            <value>
                <fullName>Freezer</fullName>
            </value>
            <value>
                <fullName>Kitchen Appliance（KA）</fullName>
            </value>
            <value>
                <fullName>Small Domestic Appliance（SDA）</fullName>
            </value>
            <value>
                <fullName>Residence Air Conditioner（RAC）</fullName>
            </value>
            <value>
                <fullName>Light Commercial Air Conditioner（LCAC）</fullName>
            </value>
            <value>
                <fullName>Commercial Air Conditioner(CAC)</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>