force-app/main/default/objects/ExpoApplyInfo__c/fields/QqWechatNumber__c.field-meta.xml
<CustomField>
    <fullName>QqWechatNumber__c</fullName>
    <label>QqWechatNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>