force-app/main/default/objects/ExpoApplyInfo__c/fields/Reception_Email__c.field-meta.xml
<CustomField>
    <fullName>Reception_Email__c</fullName>
    <label>Reception Email</label>
    <type>Email</type>
</CustomField>