force-app/main/default/objects/ExpoApplyInfo__c/fields/ReceptionId1__c.field-meta.xml
<CustomField>
    <fullName>ReceptionId1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>补充注册人ID信息</description>
    <label>ReceptionId1</label>
    <referenceTo>Internal_Registration__c</referenceTo>
    <relationshipLabel>Exhibition Customers</relationshipLabel>
    <relationshipName>Exhibition_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>