force-app/main/default/objects/ExpoApplyInfo__c/fields/ReceptionId2__c.field-meta.xml
<CustomField>
    <fullName>ReceptionId2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ReceptionId2</label>
    <referenceTo>Internal_Registration__c</referenceTo>
    <relationshipLabel>Exhibition Customers (ReceptionId2)</relationshipLabel>
    <relationshipName>Exhibition_Customers1</relationshipName>
    <type>Lookup</type>
</CustomField>