force-app/main/default/objects/ExpoApplyInfo__c/fields/ReceptionId3__c.field-meta.xml
<CustomField>
    <fullName>ReceptionId3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ReceptionId3</label>
    <referenceTo>Internal_Registration__c</referenceTo>
    <relationshipLabel>Exhibition Customers (ReceptionId3)</relationshipLabel>
    <relationshipName>Exhibition_Customers2</relationshipName>
    <type>Lookup</type>
</CustomField>