force-app/main/default/objects/ExpoApplyInfo__c/fields/ReceptionUser1__c.field-meta.xml
<CustomField>
    <fullName>ReceptionUser1__c</fullName>
    <formula>IF( ISBLANK( ExhibitionArrangement1__c ) , &apos;&apos;, 
			ExhibitionArrangement1__r.Internal_Registration__r.Name_CN__c + &apos; — &apos; +
    ExhibitionArrangement1__r.Internal_Registration__r.Phone__c  + &apos; — &apos; + 
    ExhibitionArrangement1__r.Internal_Registration__r.Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>接待人员1</label>
    <type>Text</type>
</CustomField>