force-app/main/default/objects/ExpoApplyInfo__c/fields/ReceptionUser2__c.field-meta.xml
<CustomField>
    <fullName>ReceptionUser2__c</fullName>
    <formula>IF( ISBLANK( ExhibitionArrangement2__c ) , &apos;&apos;, 
ExhibitionArrangement2__r.Internal_Registration__r.Name_CN__c + &apos; — &apos; +
ExhibitionArrangement2__r.Internal_Registration__r.Phone__c + &apos; — &apos; +
ExhibitionArrangement2__r.Internal_Registration__r.Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>接待人员2</label>
    <type>Text</type>
</CustomField>