force-app/main/default/objects/ExpoApplyInfo__c/fields/ReceptionUserInfo__c.field-meta.xml
<CustomField>
    <fullName>ReceptionUserInfo__c</fullName>
    <label>Reception User Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>