force-app/main/default/objects/ExpoApplyInfo__c/fields/ReleaseStatus__c.field-meta.xml
<CustomField>
    <fullName>ReleaseStatus__c</fullName>
    <formula>IF(OR(NOT(ISBLANK(ReceptionId1__c)), NOT(ISBLANK(ReceptionId2__c)), NOT(ISBLANK(ReceptionId3__c))), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReleaseStatus</label>
    <type>Checkbox</type>
</CustomField>