force-app/main/default/objects/ExpoApplyInfo__c/fields/SuggestionEN__c.field-meta.xml
<CustomField>
    <fullName>SuggestionEN__c</fullName>
    <label>Suggestion EN</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>