force-app/main/default/objects/ExpoApplyInfo__c/fields/WorkTel__c.field-meta.xml
<CustomField>
    <fullName>WorkTel__c</fullName>
    <label>Work Tel</label>
    <type>Phone</type>
</CustomField>