force-app/main/default/objects/ExpoApplyInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FirstNameEN__c</columns>
    <columns>LastNameEN__c</columns>
    <columns>FirstNameCN__c</columns>
    <columns>LastNameCN__c</columns>
    <columns>CompanyEN__c</columns>
    <columns>CompanyCN__c</columns>
    <columns>ExpoId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ExhibitionArrangement1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>