force-app/main/default/objects/ExpoApplyInfo__c/listViews/Copy_of_136CantonFair.listView-meta.xml
<ListView>
    <fullName>Copy_of_136CantonFair</fullName>
    <columns>NAME</columns>
    <columns>FirstNameEN__c</columns>
    <columns>LastNameEN__c</columns>
    <columns>CompanyEN__c</columns>
    <columns>Email__c</columns>
    <columns>Reception_Email__c</columns>
    <columns>FirstNameCN__c</columns>
    <columns>LastNameCN__c</columns>
    <columns>CompanyCN__c</columns>
    <columns>ExpoId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExpoTitleCN__c</field>
        <operation>contains</operation>
        <value>136</value>
    </filters>
    <label>136 Canton Fair</label>
</ListView>