force-app/main/default/objects/ExpoApplyInfo__c/listViews/Copy_of_Europe.listView-meta.xml
<ListView>
    <fullName>Copy_of_Europe</fullName>
    <columns>NAME</columns>
    <columns>FirstNameEN__c</columns>
    <columns>LastNameEN__c</columns>
    <columns>FirstNameCN__c</columns>
    <columns>LastNameCN__c</columns>
    <columns>CompanyEN__c</columns>
    <columns>CompanyCN__c</columns>
    <columns>ExpoId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ExhibitionArrangement1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExpoId__c</field>
        <operation>contains</operation>
        <value>2024欧洲杯</value>
    </filters>
    <label>2024 Europe Cup</label>
</ListView>