force-app/main/default/objects/ExpoApplyInfo__c/listViews/ifa_sep.listView-meta.xml
<ListView>
    <fullName>ifa_sep</fullName>
    <columns>NAME</columns>
    <columns>FirstNameEN__c</columns>
    <columns>LastNameEN__c</columns>
    <columns>CompanyEN__c</columns>
    <columns>Email__c</columns>
    <columns>Reception_Email__c</columns>
    <columns>FirstNameCN__c</columns>
    <columns>LastNameCN__c</columns>
    <columns>CompanyCN__c</columns>
    <columns>ExpoId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExpoId__c</field>
        <operation>contains</operation>
        <value>IFA</value>
    </filters>
    <label>2024IFA</label>
</ListView>