force-app/main/default/objects/ExpoApplyInfo__c/listViews/X137_Canton_Fair.listView-meta.xml
<ListView>
    <fullName>X137_Canton_Fair</fullName>
    <columns>NAME</columns>
    <columns>FirstNameCN__c</columns>
    <columns>FirstNameEN__c</columns>
    <columns>LastNameCN__c</columns>
    <columns>LastNameEN__c</columns>
    <columns>Email__c</columns>
    <columns>CompanyCN__c</columns>
    <columns>Cooperative_State__c</columns>
    <columns>Telephone__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Region__c</columns>
    <columns>Owner__c</columns>
    <columns>ProductInterestCN__c</columns>
    <columns>CountryRegionCN__c</columns>
    <columns>Reception_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExpoId__c</field>
        <operation>contains</operation>
        <value>138</value>
    </filters>
    <label>138 Canton Fair</label>
</ListView>